[package]
name = "kirunadb"
version = "0.0.1"
authors = ["Laurynas Biveinis <laurynas.biveinis@gmail.com>"]
license = "MIT OR Apache-2.0"
# Once it is usable:
# keywords = ""
# documentation = ""
description = "Do not use yet. Reserving the crate name."
homepage = "https://github.com/laurynas-biveinis/kirunadb"
repository = "https://github.com/laurynas-biveinis/kirunadb"
edition = "2021"

[lib]
crate-type=["staticlib", "cdylib"]

[dependencies]
tempfile = "3.5"
cap-std = "1.0"
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
