[package]
name = "kirunadb"
version = "0.0.1"
authors = ["Laurynas Biveinis <laurynas.biveinis@gmail.com>"]
license = "MIT OR Apache-2.0"
# Once it is usable:
# keywords = ""
# documentation = ""
description = "Do not use yet. Reserving the crate name."
homepage = "https://github.com/laurynas-biveinis/kirunadb"
repository = "https://github.com/laurynas-biveinis/kirunadb"
edition = "2021"

[lib]
crate-type=["rlib", "cdylib"]

[dependencies]
cap-std = "1.0"
cxx = "1.0"
num_enum = "0.6"
thiserror = "1.0.40"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
kirunadb_test_helpers = { path = "kirunadb_test_helpers" }
