[package]
name = "kirunadb"
version = "0.0.1"
authors = ["Laurynas Biveinis <laurynas.biveinis@gmail.com>"]
license = "MIT OR Apache-2.0"
# Once it is usable:
# keywords = ""
# documentation = ""
description = "Do not use yet. Reserving the crate name."
homepage = "https://github.com/laurynas-biveinis/kirunadb"
repository = "https://github.com/laurynas-biveinis/kirunadb"
edition = "2021"

[lib]
# Coverage testing needs rlib
# MySQL build needs staticlib
crate-type=["rlib", "staticlib", "cdylib"]

[dependencies]
cap-std = "1.0"
cxx = "1.0"
num_enum = "0.6"
thiserror = "1.0.40"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
kirunadb_test_helpers = { path = "kirunadb_test_helpers" }

[lints.clippy]
dbg_macro = "deny"
decimal_literal_representation = "deny"
empty_structs_with_brackets = "deny"
exit = "deny"
expect_used = "deny"
filetype_is_file = "deny"
format_push_string = "deny"
if_then_some_else_none = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
missing_enforced_import_renames = "deny"
mod_module_files = "deny"
mutex_atomic = "deny"
print_stderr = "deny"
print_stdout = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
str_to_string = "deny"
string_to_string = "deny"
try_err = "deny"
unneeded_field_pattern = "deny"
unwrap_used = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
